Reworded some of the tables, added a nice image of a rune

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="page">
         <div class="contact">
             <h1>Adam French</h1>
-            <img width=50 height=50 src="img/img.png">
+            <img width=25 height=50 src="img/rune.png">
             <div class="contact-details">
                 <p>+447563266931</p>
                 <p>adam.a.french@outlook.com</p>
@@ -45,12 +45,12 @@
             <tr>
                 <td>The University of Leeds</td>
                 <td>2021 - 2025</td>
-                <td>Computer Science with Mathematics</td>
+                <td>Computer Science with Mathematics <br> Working on a theoretical computing dissertation </td>
             </tr>
             <tr>
                 <td>The University of Waterloo</td>
                 <td>2023 - 2024</td>
-                <td>Completed my third year abroad at an award-winning university in Ontario, Canada. Engaged with the Film society and designed a shirt for my computer science class</td>
+                <td>Studied a year abroad at the respected university in Ontario, Canada. <br> Engaged with the Film society <br> Designed a shirt representing our computer graphics class</td>
             </tr>
         </table>
         <h2>Experience</h2>
@@ -101,37 +101,37 @@
                 <td>Automata</td>
                 <td>Logic, Analysis</td>
                 <td>2024+</td>
-                <td>Using Mathematica, I analyse how different automata function and try to establish similarities</td>
+                <td>Using Mathematica, analysing how different automata function and try to establish patterns in experiments </td>
             </tr>
             <tr>
                 <td>Computer Graphics</td>
                 <td>Linear Algebra, Scripting, Modelling</td>
                 <td>2023</td>
-                <td>Created a multi-threaded rust application for a computer graphics project; produced an efficient ray tracer.</td>
+                <td>A multi-threaded rust application for a computer graphics project; produced an efficient ray tracer.</td>
             </tr>
             <tr>
                 <td>Algorithms</td>
                 <td>Optimisation, Multi-threading</td>
-                <td>2022</td>
-                <td>Developed a C++ application using ImGui to investigate the efficiency of different algorithms alongside my Algorithms course.</td>
+                <td>2022 & 2024</td>
+                <td>A C++ application using ImGui to investigate the efficiency of different algorithms alongside my Algorithms course.</td>
             </tr>
             <tr>
                 <td>Personal Website</td>
                 <td>Design, UI/UX, Creative Coding</td>
-                <td>2023</td>
-                <td>Implemented design patterns and techniques using the Svelte framework (previously Nuxt3) and libraries like P5 and Three.js.</td>
+                <td>2023+</td>
+                <td>Constantly evolving <br> Has made use of Svelte, Vue, React/Redux alongside libraries like P5 and Three.js for a variety of purposes</td>
             </tr>
             <tr>
-                <td>Arduino Programming</td>
+                <td>Arduino & RasperrbyPi Programming</td>
                 <td>Soldering, Electronics</td>
                 <td>2022 - 2025</td>
-                <td>Built a small boombox with an LED screen to play hard-coded songs using an Arduino. Also, have a R-PI holding a REST API for my LED lighting</td>
+                <td>A small boombox with an LED screen to play hard-coded songs using an Arduino <br> An R-PI holding a REST API for my LED lighting</td>
             </tr>
             <tr>
                 <td>Steam Inventories</td>
                 <td>Data Analytics</td>
                 <td>2021</td>
-                <td>Utilized the Steam Web API with HTML requests to deserialize and parse large quantities of inventory information, introducing myself to data analytics.</td>
+                <td>Utilized the Steam Web API with HTML requests to regex and deserialize inventory information</td>
             </tr>
         </table>
 
@@ -145,22 +145,22 @@
             <tr>
                 <td>University of Waterloo Film Club</td>
                 <td>2023 - 2024</td>
-                <td>Worked on student-made films, namely "Moon King" and "HAM"</td>
+                <td>Worked on student-made films. Namely "Moon King" and "HAM", available online</td>
             </tr>
             <tr>
                 <td>University of Leeds Hockey Club</td>
                 <td>2022 - 2023</td>
-                <td>Participated in the University of Leeds Hockey Club.</td>
+                <td>Participated in the University of Leeds Hockey Club</td>
             </tr>
             <tr>
                 <td>Royal Air Force Air Cadets</td>
                 <td>2017 - 2020</td>
-                <td>Climbed to the role of Sergeant <br> Awarded "Best Cadet" by the Royal Company of Environmental Cleaners.</td>
+                <td>Climbed to the role of Sergeant <br> Awarded "Best Cadet" by the Royal Company of Environmental Cleaners</td>
             </tr>
             <tr>
                 <td>Socratica</td>
                 <td>2023 - 2024</td>
-                <td>Attended an independent extracurricular coworking space focused on creativity and innovation </td>
+                <td>An independent extracurricular coworking space focused on creativity and innovation </td>
             </tr>
         </table>
         <h2>Extra</h2>
@@ -171,20 +171,26 @@
                 <tr><td>Intuitive</td></tr>
                 <tr><td>Communicative</td></tr>
                 <tr><td>Adaptable</td></tr>
+                <tr><td>Versatile</td></tr>
+                <tr><td>Diligent</td></tr>
             </table>
             <table>
                 <tr><th>Interests</th></tr>
                 <tr><td>Neuroscience</td></tr>
-                <tr><td>Climbing</td></tr>
+                <tr><td>Bouldering</td></tr>
                 <tr><td>Science Fiction</td></tr>
                 <tr><td>Mathematics</td></tr>
+                <tr><td>Travelling</td></tr>
+                <tr><td>Hiking</td></tr>
             </table>
             <table>
                 <tr><th>Languages</th></tr>
                 <tr><td>Rust</td></tr>
+                <tr><td>HTML/JS</td></tr>
+                <tr><td>C/C++</td></tr>
+                <tr><td>React/Vue</td></tr>
                 <tr><td>Mathematica</td></tr>
                 <tr><td>Python</td></tr>
-                <tr><td>C/C++</td></tr>
             </table>
         </div>
     </div>
