Added link to covers.html and added covers.html

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>Adam French - Resume</title>
 </head>
 <body>
-    <div class="page">
+    <div class="a4page">
         <div class="contact">
             <h1>Adam French</h1>
-            <img width=25 height=50 src="img/rune.png">
-            <div class="contact-details">
+                <a href="covers.html"><img width=25 height=50 src="img/rune.png"></a>
+                <div class="contact-details">
                 <p>+447563266931</p>
                 <p>adam.a.french@outlook.com</p>
                 <p>STP</p>
@@ -88,7 +88,7 @@
         </table>
     </div>
 
-    <div class="page">
+    <div class="a4page">
         <h2>Personal Projects</h2>
         <table>
             <tr>
