added navigation for cover letters

--- a/covers.html
+++ b/covers.html
@@ -4,13 +4,35 @@
     <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adam French - Resume</title>
+    <title>STP - Cover Letters</title>
 </head>
 <body>
+    <table id="cover-nav" class="cover-nav">
+        <tr><th>Companies</th></tr>
+        <tr><td><a href="#Lloyds">Lloyds</a></td></tr>
+        <tr><td><a href="#Visa">Visa</a></td></tr>
+        <tr><td><a href="#JaneStreet">Jane Street</a></td></tr>
+        <tr><td><a href="#Mathworks">Mathworks</a></td></tr>
+        <tr><td><a href="#Microsoft">Microsoft</a></td></tr>
+        <tr><td><a href="#GoogleDeepmind">Google Deepmind</a></td></tr>
+        <tr><td><a href="#Google">Google</a></td></tr>
+        <tr><td><a href="#Cloudfare">Cloudfare</a></td></tr>
+        <tr><td><a href="#EA">EA</a></td></tr>
+        <tr><td><a href="#RockstarGames">Rockstar Games</a></td></tr>
+        <tr><td><a href="#ImaginationTechnologies">Imagination Technologies</a></td></tr>
+        <tr><td><a href="#HP">HP</a></td></tr>
+        <tr><td><a href="#Mozilla">Mozilla</a></td></tr>
+        <tr><td><a href="#Nvidia">Nvidia</a></td></tr>
+        <tr><td><a href="#Meta">Meta</a></td></tr>
+        <tr><td><a href="#RasberryPi">Rasberry Pi</a></td></tr>
+        <tr><td><a href="#AMD">AMD</a></td></tr>
+        <tr><td><a href="#IBM">IBM</a></td></tr>
+        <tr><td><a href="#Canonical">Canonical</a></td></tr>
+        <tr><td><a href="#IsomorphicLabs">Isomorphic Labs</a></td></tr>
+    </table>
 
 
-
-    <div class="a5page">
+    <div id="LloydsBank" class="a5page">
         <div class="contact">
             <h1>Adam French</h1>
                 <a href="index.html"><img width=25 height=50 src="img/rune.png"></a>
@@ -21,11 +43,14 @@
             </div>
         </div>
         <h2>Lloyds Bank</h2>
+        <p>
+            Working at 
+        </p>
     </div>
 
 
 
-    <div class="a5page">
+    <div id="Visa" class="a5page">
         <div class="contact">
             <h1>Adam French</h1>
                 <a href="index.html"><img width=25 height=50 src="img/rune.png"></a>
@@ -35,9 +60,273 @@
                 <p>STP</p>
             </div>
         </div>
-        <h2>Lloyds Bank</h2>
+        <h2>Visa</h2>
+    </div>
+
+    <div id="JaneStreet" class="a5page">
+        <div class="contact">
+            <h1>Adam French</h1>
+                <a href="index.html"><img width=25 height=50 src="img/rune.png"></a>
+                <div class="contact-details">
+                <p>+447563266931</p>
+                <p>adam.a.french@outlook.com</p>
+                <p>STP</p>
+            </div>
+        </div>
+        <h2>Jane Street</h2>
     </div>
 
 
 
+    <div id="Mathworks" class="a5page">
+        <div class="contact">
+            <h1>Adam French</h1>
+                <a href="index.html"><img width=25 height=50 src="img/rune.png"></a>
+                <div class="contact-details">
+                <p>+447563266931</p>
+                <p>adam.a.french@outlook.com</p>
+                <p>STP</p>
+            </div>
+        </div>
+        <h2>MathWorks</h2>
+    </div>
+    
+
+
+    <div id="Microsoft" class="a5page">
+        <div class="contact">
+            <h1>Adam French</h1>
+                <a href="index.html"><img width=25 height=50 src="img/rune.png"></a>
+                <div class="contact-details">
+                <p>+447563266931</p>
+                <p>adam.a.french@outlook.com</p>
+                <p>STP</p>
+            </div>
+        </div>
+        <h2>Microsoft</h2>
+    </div>
+
+
+
+    <div id="GoogleDeepmind" class="a5page">
+        <div class="contact">
+            <h1>Adam French</h1>
+                <a href="index.html"><img width=25 height=50 src="img/rune.png"></a>
+                <div class="contact-details">
+                <p>+447563266931</p>
+                <p>adam.a.french@outlook.com</p>
+                <p>STP</p>
+            </div>
+        </div>
+        <h2>Google Deepmind</h2>
+    </div>
+
+
+
+    <div id="Google" class="a5page">
+        <div class="contact">
+            <h1>Adam French</h1>
+                <a href="index.html"><img width=25 height=50 src="img/rune.png"></a>
+                <div class="contact-details">
+                <p>+447563266931</p>
+                <p>adam.a.french@outlook.com</p>
+                <p>STP</p>
+            </div>
+        </div>
+        <h2>Google</h2>
+    </div>
+
+
+
+    <div id="Cloudfare" class="a5page">
+        <div class="contact">
+            <h1>Adam French</h1>
+                <a href="index.html"><img width=25 height=50 src="img/rune.png"></a>
+                <div class="contact-details">
+                <p>+447563266931</p>
+                <p>adam.a.french@outlook.com</p>
+                <p>STP</p>
+            </div>
+        </div>
+        <h2>Cloudfare</h2>
+    </div>
+
+
+
+    <div id="EA" class="a5page">
+        <div class="contact">
+            <h1>Adam French</h1>
+                <a href="index.html"><img width=25 height=50 src="img/rune.png"></a>
+                <div class="contact-details">
+                <p>+447563266931</p>
+                <p>adam.a.french@outlook.com</p>
+                <p>STP</p>
+            </div>
+        </div>
+        <h2>EA</h2>
+    </div>
+
+
+
+    <div id="RockstarGames" class="a5page">
+        <div class="contact">
+            <h1>Adam French</h1>
+                <a href="index.html"><img width=25 height=50 src="img/rune.png"></a>
+                <div class="contact-details">
+                <p>+447563266931</p>
+                <p>adam.a.french@outlook.com</p>
+                <p>STP</p>
+            </div>
+        </div>
+        <h2>Rockstar Games</h2>
+    </div>
+
+
+
+    <div id="ImaginaionTechnologies" class="a5page">
+        <div class="contact">
+            <h1>Adam French</h1>
+                <a href="index.html"><img width=25 height=50 src="img/rune.png"></a>
+                <div class="contact-details">
+                <p>+447563266931</p>
+                <p>adam.a.french@outlook.com</p>
+                <p>STP</p>
+            </div>
+        </div>
+        <h2>Imagination Technologies</h2>
+    </div>
+
+
+
+    <div id="HP" class="a5page">
+        <div class="contact">
+            <h1>Adam French</h1>
+                <a href="index.html"><img width=25 height=50 src="img/rune.png"></a>
+                <div class="contact-details">
+                <p>+447563266931</p>
+                <p>adam.a.french@outlook.com</p>
+                <p>STP</p>
+            </div>
+        </div>
+        <h2>HP</h2>
+    </div>
+
+
+
+    <div id="Mozilla" class="a5page">
+        <div class="contact">
+            <h1>Adam French</h1>
+                <a href="index.html"><img width=25 height=50 src="img/rune.png"></a>
+                <div class="contact-details">
+                <p>+447563266931</p>
+                <p>adam.a.french@outlook.com</p>
+                <p>STP</p>
+            </div>
+        </div>
+        <h2>Mozilla</h2>
+    </div>
+
+
+
+    <div id="NVIDIA" class="a5page">
+        <div class="contact">
+            <h1>Adam French</h1>
+                <a href="index.html"><img width=25 height=50 src="img/rune.png"></a>
+                <div class="contact-details">
+                <p>+447563266931</p>
+                <p>adam.a.french@outlook.com</p>
+                <p>STP</p>
+            </div>
+        </div>
+        <h2>NVIDIA</h2>
+    </div>
+
+
+
+    <div id="Meta" class="a5page">
+        <div class="contact">
+            <h1>Adam French</h1>
+                <a href="index.html"><img width=25 height=50 src="img/rune.png"></a>
+                <div class="contact-details">
+                <p>+447563266931</p>
+                <p>adam.a.french@outlook.com</p>
+                <p>STP</p>
+            </div>
+        </div>
+        <h2>Meta</h2>
+    </div>
+
+
+
+    <div id="RasperrbyPi" class="a5page">
+        <div class="contact">
+            <h1>Adam French</h1>
+                <a href="index.html"><img width=25 height=50 src="img/rune.png"></a>
+                <div class="contact-details">
+                <p>+447563266931</p>
+                <p>adam.a.french@outlook.com</p>
+                <p>STP</p>
+            </div>
+        </div>
+        <h2>Rasberry Pi</h2>
+    </div>
+
+
+    <div id="AMD" class="a5page">
+        <div class="contact">
+            <h1>Adam French</h1>
+                <a href="index.html"><img width=25 height=50 src="img/rune.png"></a>
+                <div class="contact-details">
+                <p>+447563266931</p>
+                <p>adam.a.french@outlook.com</p>
+                <p>STP</p>
+            </div>
+        </div>
+        <h2>AMD</h2>
+    </div>
+
+
+
+    <div id="IBM" class="a5page">
+        <div class="contact">
+            <h1>Adam French</h1>
+                <a href="index.html"><img width=25 height=50 src="img/rune.png"></a>
+                <div class="contact-details">
+                <p>+447563266931</p>
+                <p>adam.a.french@outlook.com</p>
+                <p>STP</p>
+            </div>
+        </div>
+        <h2>IBM</h2>
+    </div>
+
+
+
+    <div id="Canonical" class="a5page">
+        <div class="contact">
+            <h1>Adam French</h1>
+                <a href="index.html"><img width=25 height=50 src="img/rune.png"></a>
+                <div class="contact-details">
+                <p>+447563266931</p>
+                <p>adam.a.french@outlook.com</p>
+                <p>STP</p>
+            </div>
+        </div>
+        <h2>Canonical</h2>
+    </div>
+
+
+
+    <div id="IsomorphicLabs" class="a5page">
+        <div class="contact">
+            <h1>Adam French</h1>
+                <a href="index.html"><img width=25 height=50 src="img/rune.png"></a>
+                <div class="contact-details">
+                <p>+447563266931</p>
+                <p>adam.a.french@outlook.com</p>
+                <p>STP</p>
+            </div>
+        </div>
+        <h2>Isomorphic Labs</h2>
+    </div>
 </body>
