Added printing and navigation link for cover letters

--- a/covers.html
+++ b/covers.html
@@ -5,11 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>STP - Cover Letters</title>
+    <style>
+        @media print {
+            @page {
+                size: A5 landscape;
+                margin: 0;
+            }
+        }
+    </style>
 </head>
 <body>
     <table id="cover-nav" class="cover-nav">
         <tr><th>Companies</th></tr>
-        <tr><td><a href="#Lloyds">Lloyds</a></td></tr>
+        <tr><td><a href="#LloydsBank">Lloyds</a></td></tr>
         <tr><td><a href="#Visa">Visa</a></td></tr>
         <tr><td><a href="#JaneStreet">Jane Street</a></td></tr>
         <tr><td><a href="#Mathworks">Mathworks</a></td></tr>
@@ -19,12 +27,12 @@
         <tr><td><a href="#Cloudfare">Cloudfare</a></td></tr>
         <tr><td><a href="#EA">EA</a></td></tr>
         <tr><td><a href="#RockstarGames">Rockstar Games</a></td></tr>
-        <tr><td><a href="#ImaginationTechnologies">Imagination Technologies</a></td></tr>
+        <tr><td><a href="#Imagination">Imagination Technologies</a></td></tr>
         <tr><td><a href="#HP">HP</a></td></tr>
         <tr><td><a href="#Mozilla">Mozilla</a></td></tr>
         <tr><td><a href="#Nvidia">Nvidia</a></td></tr>
         <tr><td><a href="#Meta">Meta</a></td></tr>
-        <tr><td><a href="#RasberryPi">Rasberry Pi</a></td></tr>
+        <tr><td><a href="#Rasberry">Rasberry Pi</a></td></tr>
         <tr><td><a href="#AMD">AMD</a></td></tr>
         <tr><td><a href="#IBM">IBM</a></td></tr>
         <tr><td><a href="#Canonical">Canonical</a></td></tr>
@@ -183,7 +191,7 @@
 
 
 
-    <div id="ImaginaionTechnologies" class="a5page">
+    <div id="Imagination" class="a5page">
         <div class="contact">
             <h1>Adam French</h1>
                 <a href="index.html"><img width=25 height=50 src="img/rune.png"></a>
@@ -228,7 +236,7 @@
 
 
 
-    <div id="NVIDIA" class="a5page">
+    <div id="Nvidia" class="a5page">
         <div class="contact">
             <h1>Adam French</h1>
                 <a href="index.html"><img width=25 height=50 src="img/rune.png"></a>
@@ -238,7 +246,7 @@
                 <p>STP</p>
             </div>
         </div>
-        <h2>NVIDIA</h2>
+        <h2>Nvidia</h2>
     </div>
 
 
@@ -258,7 +266,7 @@
 
 
 
-    <div id="RasperrbyPi" class="a5page">
+    <div id="Rasberry" class="a5page">
         <div class="contact">
             <h1>Adam French</h1>
                 <a href="index.html"><img width=25 height=50 src="img/rune.png"></a>
