--- a/index.html
+++ b/index.html
@@ -73,25 +73,25 @@
                 <td>Student</td>
                 <td>Wolfram Summer School</td>
                 <td>2024</td>
-                <td>Project Design, Reversible Mobile Automata, Timekeeping, Presentation</td>
+                <td>Project design, Reversible Mobile Automata, Timekeeping, Presentation</td>
             </tr>
             <tr>
                 <td>Bartender</td>
                 <td>Belgrave Music Hall</td>
                 <td>2022 - 2023</td>
-                <td>Bartending, cleaning, preparing for events, handling pizzas, BOH cleaning and organization and card payments.</td>
+                <td>Bartending, Cleaning, Preparing events, Handling pizza, BOH cleaning, Organization, Card payments</td>
             </tr>
             <tr>
                 <td>Cashier Assistant</td>
                 <td>To The Rise Bakery</td>
                 <td>Summer 2022</td>
-                <td>Preparing coffee, serving customers, presenting goods, cleaning bakery equipment and preparing toasties.</td>
+                <td>Preparing coffee, Serving customers, Presenting goods, Cleaning bakery equipment, Preparing toasties</td>
             </tr>
             <tr>
                 <td>Waiter</td>
                 <td>BFI Bar and Kitchen</td>
                 <td>Summer 2020</td>
-                <td>Table allocation, managing bookings, drink and food runner, dealing with complaints and BOH cleaning.</td>
+                <td>Table allocation, Managing bookings, Food and drink runner, Dealing with complaints, BOH cleaning</td>
             </tr>
         </table>
     </div>
@@ -115,13 +115,13 @@
                 <td>Computer Graphics</td>
                 <td>Linear Algebra, Scripting, Modelling</td>
                 <td>2023</td>
-                <td>A multi-threaded rust application for a computer graphics project; produced an efficient ray tracer.</td>
+                <td>A multi-threaded rust application for a computer graphics project; produced an efficient ray tracer</td>
             </tr>
             <tr>
                 <td>Algorithms</td>
                 <td>Optimisation, Multi-threading</td>
                 <td>2022 & 2024</td>
-                <td>A C++ application using ImGui to investigate the efficiency of different algorithms alongside my Algorithms course.</td>
+                <td>A C++ application using ImGui to investigate the efficiency of different algorithms alongside my Algorithms course</td>
             </tr>
             <tr>
                 <td>Personal Website</td>
@@ -130,14 +130,20 @@
                 <td>Constantly evolving <br> Has made use of Svelte, Vue, React/Redux alongside libraries like P5 and Three.js for a variety of purposes</td>
             </tr>
             <tr>
-                <td>Arduino & RasperrbyPi Programming</td>
-                <td>Soldering, Electronics</td>
+                <td>Arduino</td>
+                <td>Soldering, Low-level Programming</td>
                 <td>2022 - 2025</td>
-                <td>A small boombox with an LED screen to play hard-coded songs using an Arduino <br> An R-PI holding a REST API for my LED lighting</td>
+                <td>An small boombox with an LED screen to play hard-coded songs using an Arduino </td>
+            </tr>
+            <tr>
+                <td>Rasperrby Pi</td>
+                <td>REST API, Routing</td>
+                <td>2025</td>
+                <td>PI holding a REST API for my LED lighting</td>
             </tr>
             <tr>
                 <td>Steam Inventories</td>
-                <td>Data Analytics</td>
+                <td>Formatting, Deserialising</td>
                 <td>2021</td>
                 <td>Utilized the Steam Web API with HTML requests to regex and deserialize inventory information</td>
             </tr>
