--- a/covers.html
+++ b/covers.html
@@ -51,9 +51,7 @@
             </div>
         </div>
         <h2>Lloyds Bank</h2>
-        <p>
-            Working at 
-        </p>
+	<textarea></textarea>
     </div>
 
 
@@ -69,6 +67,7 @@
             </div>
         </div>
         <h2>Visa</h2>
+	<textarea></textarea>
     </div>
 
     <div id="JaneStreet" class="a5page">
@@ -82,6 +81,7 @@
             </div>
         </div>
         <h2>Jane Street</h2>
+	<textarea></textarea>
     </div>
 
 
@@ -97,6 +97,7 @@
             </div>
         </div>
         <h2>MathWorks</h2>
+	<textarea></textarea>
     </div>
     
 
@@ -112,6 +113,7 @@
             </div>
         </div>
         <h2>Microsoft</h2>
+	<textarea></textarea>
     </div>
 
 
@@ -127,6 +129,7 @@
             </div>
         </div>
         <h2>Google Deepmind</h2>
+	<textarea></textarea>
     </div>
 
 
@@ -142,6 +145,7 @@
             </div>
         </div>
         <h2>Google</h2>
+	<textarea></textarea>
     </div>
 
 
@@ -157,6 +161,7 @@
             </div>
         </div>
         <h2>Cloudfare</h2>
+	<textarea></textarea>
     </div>
 
 
@@ -172,6 +177,7 @@
             </div>
         </div>
         <h2>EA</h2>
+	<textarea></textarea>
     </div>
 
 
@@ -187,6 +193,7 @@
             </div>
         </div>
         <h2>Rockstar Games</h2>
+	<textarea></textarea>
     </div>
 
 
@@ -202,6 +209,7 @@
             </div>
         </div>
         <h2>Imagination Technologies</h2>
+	<textarea></textarea>
     </div>
 
 
@@ -217,6 +225,7 @@
             </div>
         </div>
         <h2>HP</h2>
+	<textarea></textarea>
     </div>
 
 
@@ -232,6 +241,7 @@
             </div>
         </div>
         <h2>Mozilla</h2>
+	<textarea></textarea>
     </div>
 
 
@@ -247,6 +257,7 @@
             </div>
         </div>
         <h2>Nvidia</h2>
+	<textarea></textarea>
     </div>
 
 
@@ -262,6 +273,7 @@
             </div>
         </div>
         <h2>Meta</h2>
+	<textarea></textarea>
     </div>
 
 
@@ -277,6 +289,7 @@
             </div>
         </div>
         <h2>Rasberry Pi</h2>
+	<textarea></textarea>
     </div>
 
 
@@ -291,6 +304,7 @@
             </div>
         </div>
         <h2>AMD</h2>
+	<textarea></textarea>
     </div>
 
 
@@ -306,6 +320,7 @@
             </div>
         </div>
         <h2>IBM</h2>
+	<textarea></textarea>
     </div>
 
 
@@ -321,6 +336,7 @@
             </div>
         </div>
         <h2>Canonical</h2>
+	<textarea></textarea>
     </div>
 
 
@@ -336,5 +352,6 @@
             </div>
         </div>
         <h2>Isomorphic Labs</h2>
+	<textarea></textarea>
     </div>
 </body>
